--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,20 @@
       integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
       crossorigin="anonymous"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Chango&display=swap"
+      rel="stylesheet"
+    />
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
     <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
+      <div class="excuse">
+        <p>OMG! you will not belive me but...</p>
+        <p id="excuse">My dog eat my homework</p>
+      </div>
+      <!--h1 class="mt-5">Hello Rigo!</h1>-->
+
       <img src="./rigo-baby.jpg" />
       <p class="alert alert-warning mt-4">
         If this text is <b>not</b> centered and <b>yellow</b>, you probably have
@@ -25,5 +34,8 @@
         <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
       </div>
     </div>
+
+    -->
+    <script src="app.js"></script>
   </body>
 </html>
